<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.settings.SettingsActivity">

    <SeekBar
        android:id="@+id/distanceSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:maxWidth="244dp"
        android:maxHeight="6dp"
        android:minWidth="244dp"
        android:minHeight="6dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/distanceTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@id/distanceSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/distanceSeekBar"
        app:layout_constraintTop_toTopOf="@id/distanceSeekBar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/discardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/settings_discard_button"
        android:onClick="discard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/validateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/settings_accept_button"
        android:onClick="validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/settingsToggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsToggleText">

        <Button
            android:id="@+id/settingsToggleToday"
            android:text="Today"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        <Button
            android:id="@+id/settingsToggleTomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tomorrow"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        <Button
            android:id="@+id/settingsToggleWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="This Week"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/settingsMinDateView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Minimum Date"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsSettersText" />

    <Button
        android:id="@+id/settingsMinDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:layout_marginEnd="32dp"
        android:text="Set Min Date"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/settingsMinDateView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settingsMinDateView" />

    <TextView
        android:id="@+id/settingsMaxDateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:hint="Maximum Date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsMinDateView" />

    <Button
        android:id="@+id/settingsMaxDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:text="Set Max Date"
        app:layout_constraintBottom_toBottomOf="@id/settingsMaxDateView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/settingsMaxDateView" />

    <TextView
        android:id="@+id/settingsToggleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Show events for"
        app:layout_constraintTop_toBottomOf="@+id/distanceSeekBar"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/settingsSettersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Or between"
        app:layout_constraintTop_toBottomOf="@+id/settingsToggleGroup"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>